# onchain_bridge

./: .gitattributes  .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
assets/wasm/: net_sdk.d.ts  net_sdk.js  net_sdk_bg.wasm  net_sdk_bg.wasm.d.ts
ios/: on_chain_bridge.podspec  onchain_bridge.podspec
ios/Classes/: MrtNativeSupportPlugin.swift  OnchainBridgePlugin.swift
lib/: base.dart  native_types.dart  on_chain_bridge.dart  on_chain_bridge_method_channel.dart  on_chain_bridge_platform_interface.dart  onchain_bridge.dart  platform_interface.dart
lib/constant/: constant.dart
lib/database/: database.dart
lib/database/actions/: actions.dart
lib/database/constants/: constants.dart
lib/database/core/: interface.dart
lib/database/exception/: exception.dart
lib/database/models/: table.dart
lib/database/utils/: utils.dart
lib/dev/: dev.dart
lib/dev/src/: logger.dart  logging.dart
lib/dev/writer/: db.dart  file.dart
lib/exception/: exception.dart
lib/interface/: interface.dart
lib/io/: desktop_impl.dart  io_impl.dart  io_platforms.dart  webview.dart
lib/io/database/: database.dart
lib/io/database/fifi/: fifi.dart
lib/io/database/interface/: interface.dart
lib/io/database/models/: db.dart  table.dart
lib/io/database/types/: types.dart
lib/io/database/utils/: statement_builder.dart
lib/io/linux/: linux.dart  utils.dart
lib/io/linux/application_id/: application_id.dart  path.dart
lib/models/: models.dart
lib/models/barcode/exception/: exception.dart
lib/models/barcode/models/: barcode_scanner_params.dart  barcode_scanner_result.dart
lib/models/biometric/: types.dart
lib/models/buffer/: buffer.dart
lib/models/config/: config.dart
lib/models/device/models/: config.dart  device_info.dart  platform.dart
lib/models/events/models/: events.dart  wallet_event.dart  webview_event.dart
lib/models/files/: picked_file_data.dart
lib/models/path/: path.dart
lib/models/share/: share.dart
lib/models/size/models/: rect.dart
lib/models/types/: types.dart
lib/models/web/: types.dart
lib/native/: desktop_impl.dart  io_impl.dart  io_platforms.dart  webview.dart
lib/native/database/constants/: constants.dart
lib/native/database/fifi/: fifi.dart
lib/native/database/interface/: interface.dart
lib/native/database/models/: db.dart  table.dart
lib/native/database/types/: types.dart
lib/native/database/utils/: statement_builder.dart
lib/native/linux/: linux.dart
lib/native/linux/application_id/: application_id.dart  path.dart
lib/native/net_sdk/constants/: constants.dart
lib/native/net_sdk/core/: net_sdk.dart
lib/native/net_sdk/types/: config.dart  ffi.dart
lib/native/types/: file.dart
lib/native/utils/: utils.dart
lib/net_sdk/: net_sdk.dart
lib/net_sdk/authenticated/: authenticated.dart
lib/net_sdk/constants/: constants.dart
lib/net_sdk/core/: api.dart  core.dart  cross.dart  default.dart
lib/net_sdk/dart/: netsdk.dart
lib/net_sdk/dart/clients/: grpc.dart  http.dart  socket.dart
lib/net_sdk/dart/core/: clients.dart  transport.dart
lib/net_sdk/dart/grpc/: gprc.dart
lib/net_sdk/dart/transport/: grpc.dart  http.dart  socket.dart
lib/net_sdk/dart/types/: types.dart
lib/net_sdk/encoder/: encoder.dart
lib/net_sdk/exception/: exception.dart
lib/net_sdk/transport/authenticated/: digest_authenticated.dart  (+1 more)
lib/net_sdk/types/: config.dart  request.dart  response.dart  status.dart  stream.dart  worker.dart
lib/net_sdk/utils/: utils.dart
lib/serialization/: serialization.dart
lib/serialization/src/: exception.dart  serialization.dart  tags.dart  types.dart
lib/utils/: utils.dart
lib/web/: web.dart
lib/web/api/: api.dart
lib/web/interface/: interface.dart
lib/web/net_sdk/: netsdk.dart
lib/web/storage/: storage.dart
lib/web/types/: file.dart
lib/web/utils/: utils.dart
lib/web/wallet/: event.dart
linux/: CMakeLists.txt  on_chain_bridge_plugin.cc  on_chain_bridge_plugin_private.h  onchain_bridge_plugin.cc  onchain_bridge_plugin_private.h
linux/include/: network.hpp  storage.hpp  utils.hpp  windows_manager.hpp
linux/include/on_chain_bridge/: on_chain_bridge_plugin.h
linux/include/onchain_bridge/: onchain_bridge_plugin.h
linux/test/: on_chain_bridge_plugin_test.cc  onchain_bridge_plugin_test.cc
macos/: on_chain_bridge.podspec  onchain_bridge.podspec
macos/Classes/: BarcodeScanner.swift  Biometric.swift  NetworkConnectivity.swift  OnChainBridgePlugin.swift  PickFile.swift  Plugin.swift
macos/Classes/NativeView/: Models.swift  WKScriptMessageHandler.swift  WebKit.swift  WebViewInterface.swift
macos/Classes/Utils/: AtomicMap.swift
test/: on_chain_bridge_method_channel_test.dart  storage.hpp
windows/: CMakeLists.txt  network_monitor.cpp  network_monitor.h  on_chain_bridge_plugin.cpp  on_chain_bridge_plugin.h  on_chain_bridge_plugin_c_api.cpp  onchain_bridge_plugin.cpp  onchain_bridge_plugin.h  onchain_bridge_plugin_c_api.cpp  storage.cpp  windows_manager.cpp
windows/include/: biometric.hpp  storage.hpp  utils.hpp  windows_manager.hpp
windows/include/on_chain_bridge/: on_chain_bridge_plugin_c_api.h
windows/include/onchain_bridge/: onchain_bridge_plugin_c_api.h
windows/test/: on_chain_bridge_plugin_test.cpp  onchain_bridge_plugin_test.cpp
(+99 files in other folders)
